# code_challenge

./: .env.example  .gitignore  CONFIGURATION-GUIDE.md  CONFIGURATION-SETUP.md  Caddyfile  ENV-CONFIG-GUIDE.md  FINAL-CONFIG-SUMMARY.md  QWEN-INTEGRATION-COMPLETE.md  QWEN-INTEGRATION-STATUS.md  QWEN-INTEGRATION.md  README.md  SECURITY-ALERT.md  UBUNTU-DEPLOYMENT-QWEN.md  UPDATE-STATUS.md  databricks.yml  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
docs/: CHUNKING-STRATEGY-EXPLAINED.md  CRITICAL-FINDING-GPT-4.1-ISSUE.md  DATABRICKS-DEPLOYMENT-MANUAL.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-QUICK-REFERENCE.md  E2E-TEST-RESULTS.md  EPIC-1-FINAL-SUMMARY.md  EPIC-2-COMPLETE.md  EPIC-3-COMPLETE.md  EPIC-3-DEPLOYMENT-GUIDE.md  EPIC-3-VALIDATION.md  FINAL-DEPLOYMENT-SUMMARY.md  LLM-CONFIG-AND-ARCHITECTURE.md  STEP-BY-STEP-DEPLOYMENT.md  TIER1-ASSESSMENT-REPORT.md  UBUNTU-DEPLOYMENT-WITH-QWEN.md  architecture-visualizations.md
scripts/: check_qwen_models.py  check_qwen_status.py  create_graph_enhanced.py  entrypoint.py  fix_code_quality.py  llm_judge.py  log_mlflow_model.py  log_model.py  quick_test.py  test_agent_e2e.py  test_hyde_specific.py  test_mlflow_serving.py  test_qwen_api.py  test_qwen_deployment.py  test_qwen_simple.py  update_and_restart.ps1  update_and_restart.sh  validate_epic3.py
tests/: evaluate.py  test_document_processor.py  test_graph.py  test_mlflow_model.py  test_queries_comprehensive.py  test_vectorstore.py
tmp/: redact_keys.py
web/: .dockerignore  .env.example  DEMO-PRESENTATION-GUIDE.md  DEV-GUIDE.md  DOCKER-DEPLOYMENT.md  Dockerfile  (+17 more)
(+56 files in other folders)
